# helvetiscan

./: .gitignore  Cargo.toml  Cross.toml  LICENSE.md  README.md  RESEARCH.md  SCHEMA.md  get_bin.sh  package.json
.github/workflows/: deploy-website.yml  release.yml
analyses/: analyse_domains.md
docs/: 01_TLS_Certificates.md  06_Technology_Fingerprinting.md  07_Domain_Protection.md  FINDINGS.md  HelvetiScan_VulnerabilityReport_ExampleClient_2026.md  HelvetiScan_VulnerabilityReport_ExternalScan_2026.md  LEGAL.md  README.md  REGULATORY.md  RESEARCH.md  ROADMAP.md  SCHEMA.md
docs/modules/: 04_Open_Ports.md  08_Sector_Classification.md
findings/: analyse_domains.md
research/: CVE.md  RESEARCH.md
research/findings/: 01-preliminary.md
scan-modules/: 01_TLS_Certificates.md  02_DNS_DNSSEC.md  03_HTTP_Security_Headers.md  04_Open_Ports.md  05_Email_Security.md  06_Technology_Fingerprinting.md  07_Domain_Protection.md  README.md
src/: benchmark.rs  classify.rs  cve.rs  dns_scan.rs  email_security.rs  geocode.rs  http_scan.rs  main.rs  ports_scan.rs  schema.rs  shared.rs  sovereignty.rs  subdomains.rs  tests.rs  tls_scan.rs  whois.rs
src/process/: Dockerfile.musl  compile_to_linux.sh  csv-to-arrow.js  export_cosmograph.js  playwright-check-cosmograph.mjs
src/processing/: export_as_parquet.rs  import_from_parquet.rs  mod.rs
web/: cosmos-loader.worker.js  index.html  serve.js
website/: CNAME  findings.html  index.html
